--- a/environment.yml
+++ b/environment.yml
@@ -1,16 +1,144 @@
 name: ESCI203
 channels:
   - conda-forge
+  - defaults
 dependencies:
-  - python3
-  - numpy==1.17.1
-  - obspy==1.1.1
-  - bokeh==2.0.1
-  - jupyter==1.0.0
-  - pyproj==1.9.6
-  - matplotlib==3.0.3
-  - ipympl==0.5.6
-  - ipysheet==0.4.4
-  - pip
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_llvm
+  - attrs=19.3.0=py_0
+  - backcall=0.1.0=py_0
+  - bleach=3.1.5=pyh9f0ad1d_0
+  - bokeh=2.0.1=py37hc8dfbb8_0
+  - brotlipy=0.7.0=py37h8f50634_1000
+  - ca-certificates=2020.4.5.1=hecc5488_0
+  - certifi=2020.4.5.1=py37hc8dfbb8_0
+  - cffi=1.14.0=py37hd463f26_0
+  - chardet=3.0.4=py37hc8dfbb8_1006
+  - cryptography=2.9.2=py37hb09aad4_0
+  - cycler=0.10.0=py_2
+  - dbus=1.13.6=he372182_0
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py37hc8dfbb8_1001
+  - expat=2.2.9=he1b5a44_2
+  - fontconfig=2.13.1=he4413a7_1000
+  - freetype=2.10.1=he06d7ca_0
+  - future=0.18.2=py37hc8dfbb8_1
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - glib=2.64.2=h6f030ca_0
+  - gst-plugins-base=1.14.5=h0935bb2_2
+  - gstreamer=1.14.5=h36ae1b5_2
+  - icu=58.2=hf484d3e_1000
+  - idna=2.9=py_1
+  - importlib-metadata=1.6.0=py37hc8dfbb8_0
+  - importlib_metadata=1.6.0=0
+  - ipykernel=5.2.1=py37h43977f1_0
+  - ipympl=0.5.6=pyh9f0ad1d_1
+  - ipysheet=0.4.3=py_1
+  - ipython=7.14.0=py37hc8dfbb8_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.5.1=py_0
+  - jedi=0.17.0=py37hc8dfbb8_0
+  - jinja2=2.11.2=pyh9f0ad1d_0
+  - jpeg=9c=h14c3975_1001
+  - jsonschema=3.2.0=py37hc8dfbb8_1
+  - jupyter=1.0.0=py_2
+  - jupyter_client=6.1.3=py_0
+  - jupyter_console=6.1.0=py_1
+  - jupyter_core=4.6.3=py37hc8dfbb8_1
+  - kiwisolver=1.2.0=py37h99015e2_0
+  - ld_impl_linux-64=2.34=h53a641e_0
+  - libblas=3.8.0=16_openblas
+  - libcblas=3.8.0=16_openblas
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=9.2.0=h24d8f2e_2
+  - libgfortran-ng=7.3.0=hdf63c60_5
+  - libiconv=1.15=h516909a_1006
+  - liblapack=3.8.0=16_openblas
+  - libopenblas=0.3.9=h5ec1e0e_0
+  - libpng=1.6.37=hed695b0_1
+  - libsodium=1.0.17=h516909a_0
+  - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libtiff=4.1.0=hc7e4089_6
+  - libuuid=2.32.1=h14c3975_1000
+  - libwebp-base=1.1.0=h516909a_3
+  - libxcb=1.13=h14c3975_1002
+  - libxml2=2.9.9=h13577e0_2
+  - libxslt=1.1.32=hae48121_1003
+  - llvm-openmp=10.0.0=hc9558a2_0
+  - lxml=4.4.1=py37h7ec2d77_0
+  - lz4-c=1.9.2=he1b5a44_1
+  - markupsafe=1.1.1=py37h8f50634_1
+  - matplotlib=3.0.3=py37_1
+  - matplotlib-base=3.0.3=py37h5f35d83_1
+  - mistune=0.8.4=py37h8f50634_1001
+  - nbconvert=5.6.1=py37hc8dfbb8_1
+  - nbformat=5.0.6=py_0
+  - ncurses=6.1=hf484d3e_1002
+  - notebook=6.0.3=py37hc8dfbb8_0
+  - numpy=1.17.1=py37h95a1406_0
+  - obspy=1.2.1=py37h03ebfcd_1
+  - olefile=0.46=py_0
+  - openssl=1.1.1g=h516909a_0
+  - packaging=20.1=py_0
+  - pandoc=2.9.2.1=0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.7.0=pyh9f0ad1d_0
+  - pcre=8.44=he1b5a44_0
+  - pexpect=4.8.0=py37hc8dfbb8_1
+  - pickleshare=0.7.5=py37hc8dfbb8_1001
+  - pillow=7.1.2=py37h718be6c_0
+  - pip=20.1=pyh9f0ad1d_0
+  - proj4=5.2.0=he1b5a44_1006
+  - prometheus_client=0.7.1=py_0
+  - prompt-toolkit=3.0.5=py_0
+  - prompt_toolkit=3.0.5=0
+  - pscript=0.7.4=pyh9f0ad1d_0
+  - pthread-stubs=0.4=h14c3975_1001
+  - ptyprocess=0.6.0=py_1001
+  - pycparser=2.20=py_0
+  - pygments=2.6.1=py_0
+  - pyopenssl=19.1.0=py_1
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyproj=1.9.6=py37h516909a_1002
+  - pyqt=5.9.2=py37hcca6a23_4
+  - pyrsistent=0.16.0=py37h8f50634_0
+  - pysocks=1.7.1=py37hc8dfbb8_1
+  - python=3.7.6=h8356626_5_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.7=1_cp37m
+  - pyyaml=5.3.1=py37h8f50634_0
+  - pyzmq=19.0.1=py37hac76be4_0
+  - qt=5.9.7=h52cfd70_2
+  - qtconsole=4.7.3=pyh9f0ad1d_0
+  - qtpy=1.9.0=py_0
+  - readline=8.0=hf8c457e_0
+  - requests=2.23.0=pyh8c360ce_2
+  - scipy=1.4.1=py37ha3d9a3c_3
+  - send2trash=1.5.0=py_0
+  - setuptools=46.2.0=py37hc8dfbb8_0
+  - sip=4.19.8=py37hf484d3e_1000
+  - six=1.14.0=py_1
+  - sqlalchemy=1.3.16=py37h8f50634_0
+  - sqlite=3.30.1=hcee41ef_0
+  - terminado=0.8.3=py37hc8dfbb8_1
+  - testpath=0.4.4=py_0
+  - tk=8.6.10=hed695b0_0
+  - tornado=6.0.4=py37h8f50634_1
+  - traitlets=4.3.3=py37hc8dfbb8_1
+  - typing_extensions=3.7.4.2=py_0
+  - urllib3=1.25.9=py_0
+  - wcwidth=0.1.9=pyh9f0ad1d_0
+  - webencodings=0.5.1=py_1
+  - wheel=0.34.2=py_1
+  - widgetsnbextension=3.5.1=py37_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xz=5.2.5=h516909a_0
+  - yaml=0.2.4=h516909a_0
+  - zeromq=4.3.2=he1b5a44_2
+  - zipp=3.1.0=py_0
+  - zlib=1.2.11=h516909a_1006
+  - zstd=1.4.4=h6597ccf_3
   - pip:
     - mplstereonet==0.5
