--- a/environment.yml
+++ b/environment.yml
@@ -4,140 +4,209 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_llvm
-  - attrs=19.3.0=py_0
-  - backcall=0.1.0=py_0
-  - bleach=3.1.5=pyh9f0ad1d_0
-  - bokeh=2.0.1=py37hc8dfbb8_0
-  - brotlipy=0.7.0=py37h8f50634_1000
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py37hc8dfbb8_0
-  - cffi=1.14.0=py37hd463f26_0
-  - chardet=3.0.4=py37hc8dfbb8_1006
-  - cryptography=2.9.2=py37hb09aad4_0
-  - cycler=0.10.0=py_2
-  - dbus=1.13.6=he372182_0
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py37hc8dfbb8_1001
-  - expat=2.2.9=he1b5a44_2
-  - fontconfig=2.13.1=he4413a7_1000
-  - freetype=2.10.1=he06d7ca_0
-  - future=0.18.2=py37hc8dfbb8_1
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - glib=2.64.2=h6f030ca_0
-  - gst-plugins-base=1.14.5=h0935bb2_2
-  - gstreamer=1.14.5=h36ae1b5_2
-  - icu=58.2=hf484d3e_1000
-  - idna=2.9=py_1
-  - importlib-metadata=1.6.0=py37hc8dfbb8_0
-  - importlib_metadata=1.6.0=0
-  - ipykernel=5.2.1=py37h43977f1_0
-  - ipympl=0.5.6=pyh9f0ad1d_1
-  - ipysheet=0.4.3=py_1
-  - ipython=7.14.0=py37hc8dfbb8_0
+  - _openmp_mutex=4.5=2_gnu
+  - alsa-lib=1.2.3=h516909a_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py38h0a891b7_2
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=pyha770c72_0
+  - black=22.3.0=pyhd8ed1ab_0
+  - bleach=5.0.0=pyhd8ed1ab_0
+  - bokeh=2.4.2=py38h578d9bd_1
+  - brotli=1.0.9=h166bdaf_7
+  - brotli-bin=1.0.9=h166bdaf_7
+  - brotlipy=0.7.0=py38h0a891b7_1004
+  - bzip2=1.0.8=h7f98852_4
+  - ca-certificates=2021.10.8=ha878542_0
+  - certifi=2021.10.8=py38h578d9bd_2
+  - cffi=1.14.6=py38ha65f79e_0
+  - charset-normalizer=2.0.12=pyhd8ed1ab_0
+  - click=8.1.2=py38h578d9bd_0
+  - cryptography=36.0.2=py38h2b5fc30_1
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dataclasses=0.8=pyhc8e2a94_3
+  - dbus=1.13.6=h48d8840_2
+  - debugpy=1.6.0=py38hfa26641_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=0.8.3=pyhd8ed1ab_0
+  - expat=2.4.8=h27087fc_0
+  - flit-core=3.7.1=pyhd8ed1ab_0
+  - fontconfig=2.14.0=h8e229c2_0
+  - fonttools=4.33.3=py38h0a891b7_0
+  - freetype=2.10.4=h0708190_1
+  - gettext=0.19.8.1=h0b5b191_1005
+  - giflib=5.2.1=h36c2ea0_2
+  - glib=2.68.4=h9c3ff4c_0
+  - glib-tools=2.68.4=h9c3ff4c_0
+  - greenlet=1.1.2=py38hfa26641_2
+  - gst-plugins-base=1.18.5=hf529b03_0
+  - gstreamer=1.18.5=h76c114f_0
+  - icu=68.2=h9c3ff4c_0
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib-metadata=4.11.3=py38h578d9bd_1
+  - importlib_resources=5.7.1=pyhd8ed1ab_0
+  - ipykernel=6.13.0=py38h7f3c49e_0
+  - ipympl=0.9.1=pyhd8ed1ab_0
+  - ipysheet=0.5.0=pyhd8ed1ab_0
+  - ipython=8.2.0=py38h578d9bd_0
   - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=py_0
-  - jedi=0.17.0=py37hc8dfbb8_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - jpeg=9c=h14c3975_1001
-  - jsonschema=3.2.0=py37hc8dfbb8_1
-  - jupyter=1.0.0=py_2
-  - jupyter_client=6.1.3=py_0
-  - jupyter_console=6.1.0=py_1
-  - jupyter_core=4.6.3=py37hc8dfbb8_1
-  - kiwisolver=1.2.0=py37h99015e2_0
-  - libblas=3.8.0=16_openblas
-  - libcblas=3.8.0=16_openblas
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.2.0=h24d8f2e_2
-  - libgfortran-ng=7.3.0=hdf63c60_5
-  - libiconv=1.15=h516909a_1006
-  - liblapack=3.8.0=16_openblas
-  - libopenblas=0.3.9=h5ec1e0e_0
-  - libpng=1.6.37=hed695b0_1
-  - libsodium=1.0.17=h516909a_0
-  - libstdcxx-ng=9.2.0=hdf63c60_2
-  - libtiff=4.1.0=hc7e4089_6
-  - libuuid=2.32.1=h14c3975_1000
-  - libwebp-base=1.1.0=h516909a_3
-  - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.9=h13577e0_2
-  - libxslt=1.1.32=hae48121_1003
-  - llvm-openmp=10.0.0=hc9558a2_0
-  - lxml=4.4.1=py37h7ec2d77_0
-  - lz4-c=1.9.2=he1b5a44_1
-  - markupsafe=1.1.1=py37h8f50634_1
-  - matplotlib=3.0.3=py37_1
-  - matplotlib-base=3.0.3=py37h5f35d83_1
-  - mistune=0.8.4=py37h8f50634_1001
-  - nbconvert=5.6.1=py37hc8dfbb8_1
-  - nbformat=5.0.6=py_0
-  - ncurses=6.1=hf484d3e_1002
-  - notebook=6.0.3=py37hc8dfbb8_0
-  - numpy=1.17.1=py37h95a1406_0
-  - obspy=1.2.1=py37h03ebfcd_1
-  - olefile=0.46=py_0
-  - openssl=1.1.1g=h516909a_0
-  - packaging=20.1=py_0
-  - pandoc=2.9.2.1=0
-  - pandocfilters=1.4.2=py_1
-  - parso=0.7.0=pyh9f0ad1d_0
-  - pcre=8.44=he1b5a44_0
-  - pexpect=4.8.0=py37hc8dfbb8_1
-  - pickleshare=0.7.5=py37hc8dfbb8_1001
-  - pillow=7.1.2=py37h718be6c_0
-  - pip=20.1=pyh9f0ad1d_0
-  - proj4=5.2.0=he1b5a44_1006
-  - prometheus_client=0.7.1=py_0
-  - prompt-toolkit=3.0.5=py_0
-  - prompt_toolkit=3.0.5=0
-  - pscript=0.7.4=pyh9f0ad1d_0
-  - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py_1001
-  - pycparser=2.20=py_0
-  - pygments=2.6.1=py_0
-  - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyproj=1.9.6=py37h516909a_1002
-  - pyqt=5.9.2=py37hcca6a23_4
-  - pyrsistent=0.16.0=py37h8f50634_0
-  - pysocks=1.7.1=py37hc8dfbb8_1
-  - python=3.7.6=h8356626_5_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.7=1_cp37m
-  - pyyaml=5.3.1=py37h8f50634_0
-  - pyzmq=19.0.1=py37hac76be4_0
-  - qt=5.9.7=h52cfd70_2
-  - qtconsole=4.7.3=pyh9f0ad1d_0
-  - qtpy=1.9.0=py_0
-  - readline=8.0=hf8c457e_0
-  - requests=2.23.0=pyh8c360ce_2
-  - scipy=1.4.1=py37ha3d9a3c_3
-  - send2trash=1.5.0=py_0
-  - setuptools=46.2.0=py37hc8dfbb8_0
-  - sip=4.19.8=py37hf484d3e_1000
-  - six=1.14.0=py_1
-  - sqlalchemy=1.3.16=py37h8f50634_0
-  - sqlite=3.30.1=hcee41ef_0
-  - terminado=0.8.3=py37hc8dfbb8_1
-  - testpath=0.4.4=py_0
-  - tk=8.6.10=hed695b0_0
-  - tornado=6.0.4=py37h8f50634_1
-  - traitlets=4.3.3=py37hc8dfbb8_1
-  - typing_extensions=3.7.4.2=py_0
-  - urllib3=1.25.9=py_0
-  - wcwidth=0.1.9=pyh9f0ad1d_0
+  - ipywidgets=7.7.0=pyhd8ed1ab_0
+  - jbig=2.1=h7f98852_2003
+  - jedi=0.18.1=py38h578d9bd_1
+  - jinja2=3.1.1=pyhd8ed1ab_0
+  - jpeg=9e=h166bdaf_1
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter=1.0.0=py38h578d9bd_7
+  - jupyter_client=7.3.0=pyhd8ed1ab_0
+  - jupyter_console=6.4.3=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py38h578d9bd_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.1.0=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.2=py38h43d8883_1
+  - krb5=1.19.3=h3790be6_0
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libblas=3.9.0=14_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_7
+  - libbrotlidec=1.0.9=h166bdaf_7
+  - libbrotlienc=1.0.9=h166bdaf_7
+  - libcblas=3.9.0=14_linux64_openblas
+  - libclang=11.1.0=default_ha53f305_1
+  - libdeflate=1.10=h7f98852_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libevent=2.1.10=h9b69904_4
+  - libffi=3.3=h58526e2_2
+  - libgcc-ng=11.2.0=h1d223b6_16
+  - libgfortran-ng=11.2.0=h69a702a_16
+  - libgfortran5=11.2.0=h5c6108e_16
+  - libglib=2.68.4=h3e27bee_0
+  - libgomp=11.2.0=h1d223b6_16
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=14_linux64_openblas
+  - libllvm11=11.1.0=hf817b99_3
+  - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.20=pthreads_h78a6416_0
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.37=h21135ba_2
+  - libpq=13.5=hd57d9b9_1
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=11.2.0=he4da1e4_16
+  - libtiff=4.3.0=h542a066_3
+  - libuuid=2.32.1=h7f98852_1000
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp=1.2.2=h3452ae3_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.9.10=h72842e0_4
+  - libxslt=1.1.33=h15afd5d_2
+  - libzlib=1.2.11=h166bdaf_1014
+  - lxml=4.8.0=py38h0a891b7_3
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - markupsafe=2.1.1=py38h0a891b7_1
+  - matplotlib=3.5.1=py38h578d9bd_0
+  - matplotlib-base=3.5.1=py38hf4fb855_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py38h497a2fe_1005
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mypy_extensions=0.4.3=py38h578d9bd_5
+  - mysql-common=8.0.29=haf5c9bc_0
+  - mysql-libs=8.0.29=h28c427c_0
+  - nbclient=0.6.0=pyhd8ed1ab_0
+  - nbconvert=6.5.0=pyhd8ed1ab_0
+  - nbconvert-core=6.5.0=pyhd8ed1ab_0
+  - nbconvert-pandoc=6.5.0=pyhd8ed1ab_0
+  - nbformat=5.3.0=pyhd8ed1ab_0
+  - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
+  - notebook=6.4.11=pyha770c72_0
+  - nspr=4.32=h9c3ff4c_1
+  - nss=3.77=h2350873_0
+  - numpy=1.22.3=py38h99721a1_2
+  - obspy=1.3.0=py38h3ec907f_0
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=1.1.1n=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandoc=2.18=ha770c72_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pathspec=0.9.0=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.1.0=py38h0ee0e06_2
+  - pip=22.0.4=pyhd8ed1ab_0
+  - platformdirs=2.5.1=pyhd8ed1ab_0
+  - prometheus_client=0.14.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.29=pyha770c72_0
+  - prompt_toolkit=3.0.29=hd8ed1ab_0
+  - pscript=0.7.5=pyhd3deb0d_0
+  - psutil=5.9.0=py38h0a891b7_1
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.12.0=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.8=pyhd8ed1ab_0
+  - pyqt=5.12.3=py38h578d9bd_8
+  - pyqt-impl=5.12.3=py38h0ffb2e6_8
+  - pyqt5-sip=4.19.18=py38h709712a_8
+  - pyqtchart=5.12=py38h7400c14_8
+  - pyqtwebengine=5.12.1=py38h7400c14_8
+  - pyrsistent=0.18.1=py38h0a891b7_1
+  - pysocks=1.7.1=py38h578d9bd_5
+  - python=3.8.10=h49503c6_1_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
+  - python_abi=3.8=2_cp38
+  - pyyaml=6.0=py38h0a891b7_4
+  - pyzmq=22.3.0=py38hfc09fa9_2
+  - qt=5.12.9=hda022c4_4
+  - qtconsole=5.3.0=pyhd8ed1ab_0
+  - qtconsole-base=5.3.0=pyhd8ed1ab_0
+  - qtpy=2.0.1=pyhd8ed1ab_0
+  - readline=8.1=h46c0cb4_0
+  - requests=2.27.1=pyhd8ed1ab_0
+  - scipy=1.8.0=py38h56a6a73_1
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=62.1.0=py38h578d9bd_0
+  - six=1.16.0=pyh6c4a22f_0
+  - soupsieve=2.3.1=pyhd8ed1ab_0
+  - sqlalchemy=1.4.36=py38h0a891b7_0
+  - sqlite=3.38.3=h4ff8645_0
+  - stack_data=0.2.0=pyhd8ed1ab_0
+  - terminado=0.13.3=py38h578d9bd_1
+  - tinycss2=1.1.1=pyhd8ed1ab_0
+  - tk=8.6.12=h27826a3_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.1=py38h0a891b7_3
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - typed-ast=1.5.3=py38h0a891b7_0
+  - typing_extensions=4.2.0=pyha770c72_1
+  - tzdata=2022a=h191b570_0
+  - unicodedata2=14.0.0=py38h0a891b7_1
+  - urllib3=1.26.9=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
-  - wheel=0.34.2=py_1
-  - widgetsnbextension=3.5.1=py37_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xz=5.2.5=h516909a_0
-  - yaml=0.2.4=h516909a_0
-  - zeromq=4.3.2=he1b5a44_2
-  - zipp=3.1.0=py_0
-  - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.4=h6597ccf_3
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - widgetsnbextension=3.6.0=py38h578d9bd_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h7f98852_2
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zipp=3.8.0=pyhd8ed1ab_0
+  - zlib=1.2.11=h166bdaf_1014
+  - zstd=1.5.2=ha95c52a_0
   - pip:
-    - mplstereonet==0.5
+    - mplstereonet==0.6.2
